--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js", "utilities.js"]
     }
   ],
   "action": {
@@ -18,5 +18,5 @@
 
   "host_permissions": ["http://*/", "https://*/*"],
 
-  "permissions": ["scripting", "tabs", "activeTab"]
+  "permissions": ["scripting", "tabs", "activeTab", "storage"]
 }
